<resources>
    <string name="app_name">LibrosMaterial</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="crear_libros">CREAR LIBROS</string>
    <string name="isbn">ISBN</string>
    <string name="titulo">Titulo</string>
    <string name="autor">Autor</string>
    <string name="no_paginas">No. Paginas</string>
    <string name="editorial">Editorial</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="mensaje_libro_guardado">Libro Guardado Exitosamente</string>
    <string name="seleccione_foto">Seleccione la foto del libro</string>
    <string name="mensaje_error_ISBN">Ingrese el ISBN</string>
    <string name="mensaje_error_titulo">Ingrese el titulo</string>
    <string name="mensaje_error_autor">Ingrese el nombre del autor</string>
    <string name="mensaje_error_no_paginas">Ingrese el numero de paginas</string>
    <string name="mensaje_error_editorial">Ingrese la editorial</string>
    <string name="mensaje_error_foto">Seleccione una foto del libro</string>
    <string name="detalle_libros">DETALLE LIBROS</string>
    <string name="mensaje_eliminar">¿ Seguro que desea eliminar este libro ?</string>
    <string name="mensaje_positivo">Si</string>
    <string name="mensaje_negativo">No</string>
    <string name="mensaje_error_ya_existe">Ya existe un libro con este ISBN</string>
    <string name="eliminar">Eliminar</string>
</resources>